--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,23 @@ android {
     }
 }
 
+def SUPPORT_LIBRARY_VERSION = '27.1.1'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation "com.android.support:design:27.1.1"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
+    implementation("com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION") {
+        force = true
+    }
+
+    implementation 'de.hdodenhof:circleimageview:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.16'
+
+    implementation "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
+    implementation "com.android.support:cardview-v7:$SUPPORT_LIBRARY_VERSION"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'nl.bravobit:android-ffmpeg:1.1.5'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 
