--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'nl.bravobit:android-ffmpeg:1.1.5'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
     implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.16'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
